fix: Retrieving application reports by application tag periodically
(cherry picked from commit 52c9334c7d90421877099e21e15b3aeb04ceb24a)