@@ -3,34 +3,42 @@ package com.flink.platform.web.environment;
 import com.flink.platform.web.model.ApplicationStatusReport;
 import com.flink.platform.web.util.ThreadUtil;
 import com.google.common.collect.Lists;
+import jakarta.annotation.Nonnull;
 import jakarta.annotation.PostConstruct;
 import jakarta.annotation.PreDestroy;
+import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.RandomUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
+import org.apache.hadoop.yarn.api.records.ApplicationReport;
 import org.apache.hadoop.yarn.client.api.YarnClient;
 import org.apache.hadoop.yarn.conf.YarnConfiguration;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.context.annotation.Lazy;
+import org.springframework.retry.annotation.Backoff;
+import org.springframework.retry.annotation.Retryable;
 import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.TimeUnit;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
+import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.apache.commons.lang3.ArrayUtils.EMPTY_STRING_ARRAY;
 
 /**
- * Hadoop client service. <br> 1. Manage the lifecycle of YarnClient and FileSystem. <br> 2. Loads
+ * Yarn client service. <br> 1. Manage the lifecycle of YarnClient and FileSystem. <br> 2. Loads
  * hadoop configuration from local disk to initialize Yarn and HDFS clients. <br>
  */
 @Slf4j
@@ -43,6 +51,7 @@ public class HadoopService {
     private final String primaryClusterIdFilePath;
 
     // tag -> ApplicationStatusReport.
+    @Getter
     private final Map<String, ApplicationStatusReport> runningApplications;
 
     private final ScheduledExecutorService reportRefreshExecutor;
@@ -57,7 +66,7 @@ public class HadoopService {
     public HadoopService(@Qualifier("primaryClusterIdFilePath") String primaryClusterIdFilePath) {
         this.primaryClusterIdFilePath = primaryClusterIdFilePath;
         this.runningApplications = new ConcurrentHashMap<>();
-        this.reportRefreshExecutor = ThreadUtil.newDaemonSingleScheduledExecutor("application-report-refresh");
+        this.reportRefreshExecutor = ThreadUtil.newDaemonSingleScheduledExecutor("yarn-application-report-refresh");
     }
 
     @SuppressWarnings("unused")
@@ -83,10 +92,15 @@ public class HadoopService {
         }
 
         // start the application report refresh thread.
-        reportRefreshExecutor.scheduleWithFixedDelay(this::refreshReport, 5, 10, TimeUnit.SECONDS);
+        reportRefreshExecutor.scheduleWithFixedDelay(this::refreshReport, RandomUtils.nextInt(10, 30), 40, SECONDS);
     }
 
-    public ApplicationStatusReport getApplicationReport(String applicationTag) throws Exception {
+    @Retryable(
+            retryFor = Exception.class,
+            maxAttempts = 4,
+            backoff = @Backoff(delay = 1500, multiplier = 2),
+            exceptionExpression = "@appRunnerChecker.shouldRetry(#root)")
+    public ApplicationStatusReport getStatusReportWithRetry(String applicationTag) throws Exception {
         if (StringUtils.isEmpty(applicationTag)) {
             log.warn("The application tag is empty.");
             return null;
@@ -94,9 +108,10 @@ public class HadoopService {
 
         var statusReport = runningApplications.get(applicationTag);
         if (statusReport == null) {
-            var applications = yarnClient.getApplications(null, null, Set.of(applicationTag));
+            var applicationTags = Collections.singleton(applicationTag);
+            var applications = getReportsWithRetry(applicationTags);
             if (CollectionUtils.isEmpty(applications)) {
-                log.warn("No application found with tag: {}", applicationTag);
+                log.warn("No application found for tag: {}", applicationTag);
                 return null;
             }
 
@@ -113,7 +128,7 @@ public class HadoopService {
     }
 
     public void killApplication(String applicationTag) throws Exception {
-        var statusReport = getApplicationReport(applicationTag);
+        var statusReport = getStatusReportWithRetry(applicationTag);
         if (statusReport == null || statusReport.isTerminalState()) {
             log.warn("The application with tag: {} does not exist or is in terminal state.", applicationTag);
             return;
@@ -162,7 +177,7 @@ public class HadoopService {
         for (var partition : partitions) {
             try {
                 var partitionTags = new HashSet<>(partition);
-                var partitionReports = yarnClient.getApplications(null, null, partitionTags);
+                var partitionReports = getReportsWithRetry(partitionTags);
                 for (var partitionReport : partitionReports) {
                     var applicationTags = partitionReport.getApplicationTags();
                     if (CollectionUtils.isEmpty(applicationTags)) {
@@ -184,6 +199,15 @@ public class HadoopService {
                 log.error("refresh application report failed", e);
             }
         }
+    }
+
+    private List<ApplicationReport> getReportsWithRetry(@Nonnull Set<String> applicationTags) throws Exception {
+        var applications = yarnClient.getApplications(null, null, applicationTags);
+        if (CollectionUtils.isEmpty(applications)) {
+            ThreadUtil.sleep(1500);
+            applications = yarnClient.getApplications(null, null, applicationTags);
+        }
+        return applications;
     }
 
     @PreDestroy
